--- a/styles/style.css
+++ b/styles/style.css
@@ -1,33 +1,75 @@
-body {
-    font-family: 'Open Sans', sans-serif;
-}
-
-.logo {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 10px;
-    margin-top: 20px;
-}
-
-.navbar-items {
-    display: flex;
-    justify-content: space-between;
-}
-
-.menu {
-    margin-top: 20px;
-}
-
-.icon-name {
-    width: 20px;
-    height: 15px;
-    margin-left: 10px;
-}
-
-.link {
-    text-decoration: none;
-    color: #3f4346;
-    cursor: default;
-    font-weight: 600;
-}
+    body {
+        font-family: 'Open Sans', sans-serif;
+    }
+    
+    @font-face {
+        font-family: 'Roborto';
+        src: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+    }
+    
+    a {
+        text-decoration: none;
+        color: #3f4246;
+        transition: 0.2s;
+        margin-top: 8px;
+    }
+    
+    a:hover {
+        color: #9598be;
+        transform: scale()
+    }
+    
+    .logo {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 10px;
+        margin-top: 20px;
+    }
+    
+    .navbar-items {
+        display: flex;
+        justify-content: space-between;
+        /* border-bottom: 0.2px solid black; */
+        box-shadow: 38px 7px 26px -4px rgba(0, 0, 0, 0.1);
+    }
+    
+    .menu {
+        display: flex;
+        gap: 20px;
+        margin-top: 20px;
+        text-decoration: none;
+        color: #3f4246;
+    }
+    
+    #btn-sign {
+        width: 80px;
+        height: 39px;
+        margin-bottom: 10px;
+        background-color: white;
+        border: 1px solid rgb(13, 110, 253);
+        color: rgb(13, 110, 253);
+        border-radius: 8px;
+        font-size: 15px;
+        transition: 0.3s;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+    }
+    
+    #btn-sign:hover {
+        background: rgb(13, 110, 253);
+        color: #fff;
+        transform: scale();
+    }
+    
+    .icon-name {
+        width: 20px;
+        height: 15px;
+        margin-left: 10px;
+    }
+    
+    .link {
+        text-decoration: none;
+        color: #3f4346;
+        cursor: default;
+        font-weight: 600;
+    }
