--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,15 @@
         color: #3f4246;
     }
     
+    .pricing {
+        text-align: center;
+        margin-top: 130px;
+        font-family: sans-serif;
+        /* font-size: 30px; */
+        font-size: x-large;
+        color: #3f4346;
+    }
+    
     #btn-sign {
         width: 80px;
         height: 39px;
