--- a/styles/style.css
+++ b/styles/style.css
@@ -1,151 +1,167 @@
-    body {
-        font-family: 'Open Sans', sans-serif;
-    }
-    
-    @font-face {
-        font-family: 'Roborto';
-        src: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
-    }
-    
-    ul {
-        margin-top: 25px;
-    }
-    
-    #mab {
-        text-align: center;
-    }
-    
-    strong {
-        text-align: center;
-        font-weight: bold;
-        color: #212529;
-        font-size: 35px;
-    }
-    
-    span {
-        font-size: 35px;
-        color: #595c5f;
-    }
-    
-    li {
-        list-style: none;
-        font-size: 17px;
-        text-align: start;
-        font-weight: 100;
-    }
-    
-    a {
-        text-decoration: none;
-        color: #3f4246;
-        transition: 0.2s;
-        margin-top: 8px;
-    }
-    
-    a:hover {
-        color: #9598be;
-        transform: scale()
-    }
-    
-    .logo {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        gap: 10px;
-        margin-top: 20px;
-    }
-    
-    .navbar-items {
-        display: flex;
-        justify-content: space-between;
-        /* border-bottom: 0.2px solid black; */
-        box-shadow: 38px 7px 26px -4px rgba(0, 0, 0, 0.1);
-    }
-    
-    .menu {
-        display: flex;
-        gap: 20px;
-        margin-top: 20px;
-        text-decoration: none;
-        color: #3f4246;
-    }
-    
-    .pricing {
-        text-align: center;
-        margin-top: 130px;
-        font-family: sans-serif;
-        /* font-size: 30px; */
-        font-size: x-large;
-        color: #3f4346;
-    }
-    
-    #btn-sign {
-        width: 80px;
-        height: 39px;
-        margin-bottom: 10px;
-        background-color: white;
-        border: 1px solid rgb(13, 110, 253);
-        color: rgb(13, 110, 253);
-        border-radius: 8px;
-        font-size: 15px;
-        transition: 0.3s;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-    }
-    
-    #btn-sign:hover {
-        background: rgb(13, 110, 253);
-        color: #fff;
-        transform: scale();
-    }
-    
-    .card {
-        border: 0.5px solid #d2d2d2;
-        background-image: repeating-linear-gradient(45deg, #f0f8ff, f0f8ff 10px, #e0f7fa 10px, #e0e0e0 20px);
-        width: 250px;
-        overflow: hidden;
-        height: 300px;
-        border-radius: 9.6px;
-        transition: transform 0.4s ease, box-shadow 0.3s ease;
-    }
-    
-    .card:hover {
-        transform: translateY(-10px);
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    }
-    
-    .head {
-        text-align: center;
-        font-size: 1.5rem;
-        color: #333;
-        background: transparent;
-        border-bottom: 0.5px solid #d2d2d2;
-    }
-    
-    .sp {
-        text-align: center;
-    }
-    
-    .price {
-        display: flex;
-        flex-direction: column;
-        font-size: 20px;
-        text-align: inherit;
-    }
-    
-    .cards {
-        display: flex;
-        justify-content: space-around;
-        margin-top: 8em;
-    }
-    
-    .icon-name {
-        width: 20px;
-        height: 15px;
-        margin-left: 10px;
-    }
-    
-    .link {
-        text-decoration: none;
-        color: #3f4346;
-        cursor: default;
-        font-weight: 600;
-    }
+        body {
+            font-family: 'Open Sans', sans-serif;
+        }
+        
+        @font-face {
+            font-family: 'Roborto';
+            src: url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+        }
+        
+        ul {
+            margin-top: 25px;
+        }
+        
+        #mab {
+            text-align: center;
+        }
+        
+        strong {
+            text-align: center;
+            font-weight: bold;
+            color: #212529;
+            font-size: 35px;
+        }
+        
+        span {
+            font-size: 35px;
+            color: #595c5f;
+        }
+        
+        li {
+            list-style: none;
+            font-size: 17px;
+            text-align: start;
+            font-weight: 100;
+        }
+        
+        a {
+            text-decoration: none;
+            color: #3f4246;
+            transition: 0.2s;
+            margin-top: 8px;
+        }
+        
+        a:hover {
+            color: #9598be;
+            transform: scale()
+        }
+        
+        .logo {
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        
+        .navbar-items {
+            display: flex;
+            justify-content: space-between;
+            /* border-bottom: 0.2px solid black; */
+            box-shadow: 38px 7px 26px -4px rgba(0, 0, 0, 0.1);
+        }
+        
+        .menu {
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+            text-decoration: none;
+            color: #3f4246;
+        }
+        
+        .pricing {
+            text-align: center;
+            margin-top: 130px;
+            font-family: sans-serif;
+            /* font-size: 30px; */
+            font-size: x-large;
+            color: #3f4346;
+        }
+        
+        #btn-sign {
+            width: 80px;
+            height: 39px;
+            margin-bottom: 10px;
+            background-color: white;
+            border: 1px solid rgb(13, 110, 253);
+            color: rgb(13, 110, 253);
+            border-radius: 8px;
+            font-size: 15px;
+            transition: 0.3s;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+        }
+        
+        #btn-sign:hover {
+            background: rgb(13, 110, 253);
+            color: #fff;
+            transform: scale();
+        }
+        
+        .card {
+            border: 0.5px solid #d2d2d2;
+            background-image: repeating-linear-gradient(45deg, #f0f8ff, f0f8ff 10px, #e0f7fa 10px, #e0e0e0 20px);
+            width: 250px;
+            overflow: hidden;
+            height: 300px;
+            border-radius: 9.6px;
+            transition: transform 0.4s ease, box-shadow 0.3s ease;
+        }
+        
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        
+        .head {
+            text-align: center;
+            font-size: 1.5rem;
+            color: #333;
+            background: transparent;
+            border-bottom: 0.5px solid #d2d2d2;
+        }
+        
+        .sp {
+            text-align: center;
+        }
+        
+        .price {
+            display: flex;
+            flex-direction: column;
+            font-size: 20px;
+            text-align: inherit;
+        }
+        
+        .cards {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 8em;
+        }
+        
+        .icon-name {
+            width: 20px;
+            height: 15px;
+            margin-left: 10px;
+        }
+        
+        .link {
+            text-decoration: none;
+            color: #3f4346;
+            cursor: default;
+            font-weight: 600;
+        }
+        
+        .btn-buy {
+            width: 250px;
+            height: 40px;
+            background-color: #fff;
+            border: 0.6px solid #0d6efd;
+            border-radius: 15px;
+            color: #0d6efd;
+            font-size: 20px;
+            transition: 0.3s;
+        }
+        
+        .btn-buy:hover {
+            background-color: #0d6efd;
+            color: #fff;
+        }
