Enhance styling with gradient background and card effects

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,23 @@
+    html, body {
+    width: auto;
+    height:auto;
+    }
         body {
             font-family: 'Open Sans', sans-serif;
+            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background-size: 400% 400%;
+            animation: gradient 15s ease infinite;
+        }
+        @keyframes gradient {
+            0% {
+                background-position: 0% 50%;
+            }
+            50% {
+                background-position: 100% 50%;
+            }
+            100% {
+                background-position: 0% 50%;
+            }
         }
         
         @font-face {
@@ -99,7 +117,13 @@
         
         .card {
             border: 0.5px solid #d2d2d2;
-            background-image: repeating-linear-gradient(45deg, #f0f8ff, f0f8ff 10px, #e0f7fa 10px, #e0e0e0 20px);
+           /* From https://css.glass */
+             background: rgba(255, 255, 255, 0.37);
+            border-radius: 16px;
+            box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(1.5px);
+            -webkit-backdrop-filter: blur(1.5px);
+            border: 1px solid rgba(255, 255, 255, 0.52);
             width: 250px;
             overflow: hidden;
             height: 300px;
