--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     }
         body {
             font-family: 'Open Sans', sans-serif;
-            background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+            background: linear-gradient(-45deg, #7f4c3c, #c46086, #0aa5de, #23d5ab);
             background-size: 400% 400%;
             animation: gradient 15s ease infinite;
         }
@@ -130,7 +130,24 @@
             border-radius: 9.6px;
             transition: transform 0.4s ease, box-shadow 0.3s ease;
         }
-        
+        @media only screen and (max-width: 480px)  {
+            .cards{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin-bottom:50px;
+            }
+            .card{
+                margin-bottom: 5em;
+            }
+            .pricing{
+                font-family:  monospace;
+                line-height: 35px;
+                text-align: center;
+                overflow: hidden;
+            }
+            
+        }
         .card:hover {
             transform: translateY(-10px);
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
